<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e8ffff"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="#009884"
            android:gravity="center"
            android:text="@string/triangle"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            :ignore="SpeakableTextPresentCheck"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:text="@string/no"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginBottom="10dp"
            android:background="#B9FFFF"
            android:ems="10"
            android:hint="@string/enter_value_of_height"

            android:inputType="number"
            android:textColor="#000000"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextNumber4"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="#B9FFFF"
            android:ems="10"
            android:hint="@string/enter_value_of_base"
            android:inputType="number"
            android:textColor="#000000"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextNumber3"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:ems="10"
            android:inputType="number"
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/y"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/calculate"
            android:backgroundTint="#009884"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:backgroundTint="#009884"
            android:gravity="center"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>