<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="#e8ffff"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="#009884"
            android:gravity="center"
            android:text="@string/calculator"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/Circle"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:backgroundTint="#B9FFFF"
            android:gravity="center"
            android:text="@string/circle"
            android:textColor="#000000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/Rectangle"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/rectangle"
            android:backgroundTint="#B9FFFF"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/Triangle"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/triangle"
            android:backgroundTint="#B9FFFF"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/Square"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:backgroundTint="#B9FFFF"
            android:gravity="center"
            android:text="@string/square"
            android:textColor="#000000"
            android:textSize="25sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>